--- a/BTBE condensed (D3K)/HTML/BTBE condensed (D3K).html
+++ b/BTBE condensed (D3K)/HTML/BTBE condensed (D3K).html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -170,14 +170,14 @@
             </div>
             <div class="page-content">
                 <h2>On the Subject of LEDs</h2>
-                <p class="flavour-text">LED mixing for n00bs.</p>
+                <p class="flavour-text">RGB mixing for n00bs.</p>
                 <ul>
                     <li>To defuse this module you must submit the correct frequency.</li>
                     <li>Find which LED color to use, then the corresponding frequency.</li>
                 </ul>
 
                 <h4>Step 1: Determine LED color</h4>
-                <p style="margin-bottom: 0.5em;">Familiarize yourself with LED mixing. For example, <em>Magenta has the color Red in it, 
+                <p style="margin-bottom: 0.5em;">Familiarize yourself with RGB mixing. For example, <em>Magenta has the color Red in it, 
                     but does not have the color Green in it.</em></p>
                 <p style="margin-top: 0;">Cyan = Green + Blue; Magenta = Red + Blue; Yellow = Red + Green;</p>
 
